# api_nodeplus

./: .env-example  .gitignore  Cargo.toml  Rocket.toml
migrations/2021-07-22-103557_init/: down.sql  up.sql
migrations/2021-12-01-042746_update_k_and_c/: up.sql
migrations/2021-12-06-080259_update_k_and_c/: down.sql  up.sql
src/: controller.rs  main.rs  service.rs  todo.md
src/controller/: contact_us_controller.rs  request.rs  response.rs  stats_controller.rs
src/controller/request/: contact_us_request.rs
src/controller/response/: base.rs  stats_response.rs
src/service/: db_service.rs  schema.rs
test/: api.http
