[package]
name = "api_nodeplus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4", features = ["sqlite", "r2d2","chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
chrono = "0.4"
cronjob = "0.3.17"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
telegram_notifyrs = "0.1.3"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "msgpack", "uuid"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool", "sqlite_pool"]